--- a/templates/fundamental/login.twig
+++ b/templates/fundamental/login.twig
@@ -2,26 +2,7 @@
 {% block title %}Crystal User System{% endblock %}
 {% block body %}
     <h2>Crystal User System - Login</h2>
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    {{ last_username }}
-    <form action="" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
-
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-
-        <input type="hidden" name="_target_path" value="/display/{{ last_username }}" />
-
-        <button type="submit">login</button>
-    </form>
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
 {% endblock %}
