Implemented "Logout" Feature.

--- a/templates/display.twig
+++ b/templates/display.twig
@@ -7,5 +7,7 @@
     <h2>Crystal User System</h2>
     <p>ID: {{ id }}</p>
     <p>Username: {{ username }}</p>
+    <p>Email: {{ email }}</p>
     <p>Password: {{ password }}</p>
+    <a href="{{ path('app_logout') }}">Logout</a>
 {% endblock %}
