Implemented email verification.

--- a/templates/display.twig
+++ b/templates/display.twig
@@ -9,5 +9,6 @@
     <p>Username: {{ username }}</p>
     <p>Email: {{ email }}</p>
     <p>Password: {{ password }}</p>
+    <p>Admin Permission Level: {{ admin }}</p>
     <a href="{{ path('app_logout') }}">Logout</a>
 {% endblock %}
